fix: change --space variables to --spacing

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,14 +1,6 @@
 @import "tailwindcss";
 
 @theme {
-  /* Alignment */
-  --wide: min(calc(100% - 2rem), 1280px);
-  --narrow: min(calc(100% - 2rem), 850px);
-  
-  /* Typography */
-  --font-sans: var(--roboto), sans-serif;
-  --font-cursive: var(--caveat), cursive;
-
   /* Colors */
   --color-teal: #50C9B4;
   --color-teal: oklch(0.7621 0.1122 179.72);
@@ -26,6 +18,23 @@
   --color-charcoal-gray: oklch(0.4514 0.0251 261.67);
   --color-marigold-yellow: #EAA221;
   --color-marigold-yellow: oklch(0.7636 0.1533 75.16);
+
+  /* Spacing */
+  --spacing-20: 10px;
+  --spacing-30: 20px;
+  --spacing-40: 30px;
+  --spacing-50: clamp(30px, 5vw, 50px);
+  --spacing-60: clamp(30px, 7vw, 70px);
+  --spacing-70: clamp(50px, 7vw, 90px);
+  --spacing-80: clamp(70px, 10vw, 140px);
+
+  /* Alignment */
+  --wide: 1280px;
+  --narrow: 850px;
+  
+  /* Typography */
+  --font-sans: var(--roboto), sans-serif;
+  --font-cursive: var(--caveat), cursive;
 }
 
 /* Base Layer: Foundational styles */
@@ -43,64 +52,97 @@
 
 /* Components Layer: Reusable UI components */
 @layer components {
-  .entry-content {
-    *:not(.alignfull) {
-      @apply mx-auto max-w-[var(--narrow)];
-    }
+  .entry-content > .alignfull {
+    @apply !mx-0 w-full;
+  }
+  
+  .entry-content > *:not(.alignfull) {
+    @apply !mx-auto px-4 max-w-[var(--narrow)];
+  }
 
-    .alignwide {
-      @apply max-w-[var(--wide)];
-    }
+  .wp-block-cover__image-background {
+    @apply object-cover;
+  }
 
-    .alignfull {
-      @apply mx-0 w-full;
-    }
+  .wp-block-columns {
+    @apply flex flex-wrap;
+  }
 
-    .alignleft {
-      @apply float-left mr-4
-    }
-
-    .alignright {
-      @apply float-right ml-4;
-    }
-    
-    .aligncenter {
-      @apply mx-auto;
-    }
+  .wp-block-column {
+    @apply flex-1;
   }
 }
 
 /* Utilities Layer: Custom utility classes */
 @layer utilities {
+  /* Colors */
   .has-teal-background-color { background-color: var(--color-teal); }
-  .has-teal-color { color: var(--color-teal); }
+  .has-text-color-teal { color: var(--color-teal); }
   .has-teal-border-color { border-color: var(--color-teal); }
 
   .has-warm-coral-background-color { background-color: var(--color-warm-coral); }
-  .has-warm-coral-color { color: var(--color-warm-coral); }
+  .has-text-color-warm-coral { color: var(--color-warm-coral); }
   .has-warm-coral-border-color { border-color: var(--color-warm-coral); }
 
   .has-muted-brick-red-background-color { background-color: var(--color-muted-brick-red); }
-  .has-muted-brick-red-color { color: var(--color-muted-brick-red); }
+  .has-text-color-muted-brick-red { color: var(--color-muted-brick-red); }
   .has-muted-brick-red-border-color { border-color: var(--color-muted-brick-red); }
 
   .has-deep-black-background-color { background-color: var(--color-deep-black); }
-  .has-deep-black-color { color: var(--color-deep-black); }
+  .has-text-color-deep-black { color: var(--color-deep-black); }
   .has-deep-black-border-color { border-color: var(--color-deep-black); }
 
   .has-retro-teal-background-color { background-color: var(--color-retro-teal); }
-  .has-retro-teal-color { color: var(--color-retro-teal); }
+  .has-text-color-retro-teal { color: var(--color-retro-teal); }
   .has-retro-teal-border-color { border-color: var(--color-retro-teal); }
 
   .has-soft-cream-background-color { background-color: var(--color-soft-cream); }
-  .has-soft-cream-color { color: var(--color-soft-cream); }
+  .has-text-color-soft-cream { color: var(--color-soft-cream); }
   .has-soft-cream-border-color { border-color: var(--color-soft-cream); }
 
   .has-charcoal-gray-background-color { background-color: var(--color-charcoal-gray); }
-  .has-charcoal-gray-color { color: var(--color-charcoal-gray); }
+  .has-text-color-charcoal-gray { color: var(--color-charcoal-gray); }
   .has-charcoal-gray-border-color { border-color: var(--color-charcoal-gray); }
 
   .has-marigold-yellow-background-color { background-color: var(--color-marigold-yellow); }
-  .has-marigold-yellow-color { color: var(--color-marigold-yellow); }
+  .has-text-color-marigold-yellow { color: var(--color-marigold-yellow); }
   .has-marigold-yellow-border-color { border-color: var(--color-marigold-yellow); }
+
+  .is-dark {
+    @apply text-soft-cream;
+  }
+
+  .is-light {
+    @apply text-deep-black;
+  }
+
+  /* Spacing */
+  .spacing-20 { padding: var(--spacing-20); }
+  .spacing-30 { padding: var(--spacing-30); }
+  .spacing-40 { padding: var(--spacing-40); }
+  .spacing-50 { padding: var(--spacing-50); }
+  .spacing-60 { padding: var(--spacing-60); }
+  .spacing-70 { padding: var(--spacing-70); }
+  .spacing-80 { padding: var(--spacing-80); }
+
+  /* Alignment */
+  .alignfull {
+    @apply mx-0 w-full;
+  }
+
+  .alignwide {
+    @apply mx-auto px-4 w-full max-w-[var(--wide)];
+  }
+
+  .alignleft {
+    @apply float-left mr-4
+  }
+
+  .alignright {
+    @apply float-right ml-4;
+  }
+  
+  .aligncenter {
+    @apply mx-auto;
+  }
 }
